--- a/provider_server/templates/components/provider_sidebar.html
+++ b/provider_server/templates/components/provider_sidebar.html
@@ -10,7 +10,7 @@
     }
 
     /* 사이드바 스타일 */
-    .sidebar {
+    /* .sidebar {
         width: 250px;
         height: 100vh;
         background-color: #343a40;
@@ -19,7 +19,7 @@
         left: 0;
         overflow-y: auto;
         transition: width 0.3s ease;
-    }
+    } */
 
     /* 메뉴 스타일 */
     .nav-menu {
